plugins {
    id 'java'
}

ext.moduleName='pl.mendroch.modularization.core'
group 'pl.mendroch.modularization'
version '1.0-SNAPSHOT'

sourceCompatibility = 12
targetCompatibility = 12

repositories {
    mavenCentral()
}

dependencies {
    implementation project(':common')

    testCompile group: 'junit', name: 'junit', version: '4.12'
}

compileJava {
    inputs.property("moduleName", moduleName)
    doFirst {
        options.compilerArgs = [
                '--add-exports', 'java.base/jdk.internal.loader=pl.mendroch.modularization.core',
                '--add-exports', 'java.base/jdk.internal.misc=pl.mendroch.modularization.core',
                '--module-path', classpath.asPath,
        ]
        classpath = files()
    }
}

